# kalbytes_assignment

feature-extraction/: README.md  pyproject.toml
feature-extraction/data_source/: product_1.txt  product_2.txt  product_3.txt  product_4.txt  product_5.txt
feature-extraction/output/: all_products.xlsx  product_1.xlsx  product_2.xlsx  product_3.xlsx  product_4.xlsx  product_5.xlsx
feature-extraction/src/feature_extraction/: extract_features.py  llm_config.py  load_text_files.py
